--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,1 +1,38 @@
 # GitHub Actions CI/CD pipeline
+name: ML Pipeline CI/CD
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run unit tests
+      run: |
+        pytest tests/ --maxfail=1 --disable-warnings -q
+
+    - name: Run training pipeline
+      run: |
+        python main.py
+
+    - name: Check Streamlit app
+      run: |
+        python -m streamlit run app.py --server.headless true --server.port 8501 --runner.magic=false
