--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,11 +1,10 @@
-# GitHub Actions CI/CD pipeline
-name: ML Pipeline CI/CD
+name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build-and-test:
@@ -18,21 +17,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run unit tests
+    - name: Run tests
       run: |
         pytest tests/ --maxfail=1 --disable-warnings -q
 
-    - name: Run training pipeline
+    - name: Build Docker image
       run: |
-        python main.py
-
-    - name: Check Streamlit app
-      run: |
-        python -m streamlit run app.py --server.headless true --server.port 8501 --runner.magic=false
+        docker build -t telco-churn-app .
